fix overflow problem

--- a/src/layouts/dashboard/dashboard.css
+++ b/src/layouts/dashboard/dashboard.css
@@ -1,4 +1,8 @@
 
+.demo-wrapper {
+    overflow: hidden;
+}
+
 /** JOYRIDE **/
 
 .demo__section {
